[package]
name = "raytracing_in_one_weekend"
version = "0.1.0"
authors = ["Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.3", features = ["small_rng"] }
